PARTICIPANTS: use this file for creating the class diagram in mastery task 01
@startuml

class RuntimeException
class AlbumTrackNotFoundException
class InvalidAttributeValueException
class PlaylistNotFoundException
class InvalidAttributeException
class InvalidAttributeChangeException

AlbumTrackNotFoundException --|> RuntimeException
InvalidAttributeException --|> RuntimeException
PlaylistNotFoundException --|> RuntimeException
InvalidAttributeValueException --|> InvalidAttributeException
InvalidAttributeChangeException --|> InvalidAttributeException

class AddSongToPlaylistActivity {
- log : Logger
- playlistDao : PlaylistDao
- albumTrackDao : AlbumTrackDao
+ AddSongToPlaylistActivity()
+ handleRequest(AddSongToPlaylistRequest) : AddSongToPlaylistResult
}

class CreatePlaylistActivity {
- log : Logger
- playlistDao : PlaylistDao
+ CreatePlaylistActivity()
+ handleRequest(CreatePlaylistRequest) : CreatePlaylistResult
}

class GetPlaylistActivity {
- log : Logger
- playlistDao : PlaylistDao
+ GetPlaylistActivity()
+ handleRequest(GetPlaylistRequest) : GetPlaylistResult
}

class GetPlaylistSongsActivity {
- log : Logger
- playlistDao : PlaylistDao
+ GetPlaylistSongsActivity()
+ handleRequest(GetPlaylistSongsRequest) : GetPlaylistSongsResult
}

class UpdatePlaylistActivity {
- log : Logger
- playlistDao : PlaylistDao
+ UpdatePlaylistActivity()
+ handleRequest(UpdatePlaylistRequest) : UpdatePlaylistResult
}

class Playlist {
- @DynamoDBHashKey id : String
- name : String
- customerId : String
- songCount : Integer
- tags : Set<String>
- songList : List<AlbumTrack>
}

class AlbumTrackDao {
dynamoDbMapper : DynamoDBMapper
+ AlbumTrackDao()
}

class PlaylistDao {
dynamoDbMapper : DynamoDBMapper
+ PlaylistDao()
+ getPlaylist(String) : Playlist
}

class AlbumTrack {
- @DynamoDBHashKey asin : String
- @DynamoDBRangeKey trackNumber : Integer
- albumName : String
- songTitle : String
}

interface RequestHandler

AddSongToPlaylistActivity ..|> RequestHandler
Logger --o AddSongToPlaylistActivity
PlaylistDao --o AddSongToPlaylistActivity

AddSongToPlaylistActivity o-- AlbumTrackDao

CreatePlaylistActivity ..|> RequestHandler
Logger --o CreatePlaylistActivity
PlaylistDao --o CreatePlaylistActivity

GetPlaylistActivity ..|> RequestHandler
Logger --o GetPlaylistActivity
PlaylistDao --o GetPlaylistActivity

GetPlaylistSongsActivity ..|> RequestHandler
Logger --o GetPlaylistSongsActivity
PlaylistDao --o GetPlaylistSongsActivity

UpdatePlaylistActivity ..|> RequestHandler
Logger --o UpdatePlaylistActivity
PlaylistDao --o UpdatePlaylistActivity

AlbumTrack o-- Playlist
@enduml